@@ -61,7 +61,7 @@ namespace YAFC {
             ChoiceObject(gui, "Target technology for cost analysis: ", Database.technologies.all, prefs.targetTechnology, x => {
                 prefs.RecordUndo().targetTechnology = x;
                 gui.Rebuild();
-            });
+            }, width: 25f);
 
             if (gui.BuildButton("Done"))
                 Close();
@@ -71,11 +71,14 @@ namespace YAFC {
                 Project.current.RecalculateDisplayPages();
         }
 
-        private void ChoiceObject<T>(ImGui gui, string text, T[] list, T current, Action<T> select) where T : FactorioObject {
+        /// <summary>Add a GUI element that opens a popup to allow the user to choose from the <paramref name="list"/>, which triggers <paramref name="select"/>.</summary>
+        /// <param name="text">Label to show.</param>
+        /// <param name="width">Width of the popup. Make sure it is wide enough to fit text!</param>
+        private void ChoiceObject<T>(ImGui gui, string text, T[] list, T current, Action<T> select, float width = 20f) where T : FactorioObject {
             using (gui.EnterRow()) {
                 gui.BuildText(text, topOffset: 0.5f);
                 if (gui.BuildFactorioObjectButtonWithText(current))
-                    gui.BuildObjectSelectDropDown(list, DataUtils.DefaultOrdering, select, text);
+                    gui.BuildObjectSelectDropDown(list, DataUtils.DefaultOrdering, select, text, width: width);
             }
         }
 
