@@ -3,6 +3,7 @@ Version: 0.6.2
 Date: soon(tm)
     Changes:
         - Fix text alignment of about screen
+        - Fix width of 'Target technology for cost analysis' preference popup
 ----------------------------------------------------------------------------------------------------------------------
 Version: 0.6.1
 Date: Feb 2024
